# BarterBench

./: .gitignore  README.md  agent.py  analysis.py  backfill_process_metrics.py  bradley_terry.py  dashboard.html  elo.py  engine.py  eval.py  kaggle_benchmark.ipynb  model_registry.py  pyproject.toml  scenario_gen.py  scoring.py  solvability.py  taxonomy.py  test_local.py
.claude/: launch.json
.github/workflows/: publish-kaggle.yml  push-to-pi.yml
arena/: runner.py
arena/strategies/: analytical.json  cooperative.json
barter_eval/: .gitignore  README.md  agent.py  dashboard.html  elo.py  engine.py  eval.py  program.md  results.json  scoring.py
barter_eval/arena/: runner.py
barter_eval/arena/strategies/: aggressive.json
barter_eval/scenarios/: complex_market.json  resource_scarcity.json  water_crisis.json
environments/barterbench/: README.md  barterbench.py  pyproject.toml
environments/barterbench/.prime/: .env-metadata.json
scenarios/: fruit_trade.json  gold_rush.json  grand_bazaar.json  hidden_gem.json  spice_wars.json
scripts/: publish_kaggle.py
tests/: test_engine.py  test_manipulation.py  test_model_registry.py  test_random_agent.py  test_scoring.py
