[project]
name = "barterbench"
version = "1.0.0"
description = "Competitive marketplace benchmark for AI agents with ELO ratings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "agent.py",
    "bradley_terry.py",
    "elo.py",
    "engine.py",
    "model_registry.py",
    "scoring.py",
    "scenario_gen.py",
    "solvability.py",
    "taxonomy.py",
    "scenarios/",
]
