[project]
name = "barterbench"
description = "BarterBench: competitive multi-agent marketplace RL environment"
tags = ["multi-agent", "economics", "competition", "barter", "train", "eval"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
    "barterbench @ git+https://github.com/JamesEBall/BarterBench.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["barterbench.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 4
